# yes-chef

./: .env.example  ImageDescription.py  LICENSE.md  README.md  armcontrol.py  cartesia_client.py  chef_puppet_control.py  example_main_outline.py  main.py  pipecat_pipeline.py  positions.yaml  pyproject.toml  requirements.txt  servo.py  test.py  windows-ping.py  windows-test.py
porcupine_models/: Hey-Chef_en_raspberry-pi_v3_0_0.ppn
